--- a/application.yml
+++ b/application.yml
@@ -1,15 +1,17 @@
-spring：
-  profiles：
-    active：
-    -dev
+spring:
+  profiles:
+  active:
+  - dev
+
 ---
-spring：
-  profiles: dev#开发环境
-  application：
+spring:
+profiles: dev #开发环境
+  application:
     name: microservicecloud-config-legend-dev
+
 ---
-spring：
+spring:
   profiles: test  #测试环境
-  application：
+  application:
     name: microservicecloud-config-legend-test
 # 请保存为UTF-8格式
